Make buildout install front-end resources

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,29 +4,30 @@
 # http://pypi.python.org/pypi 
 # ... just reach by the recipe name
 [buildout]
+
+extends = 
+    https://raw.github.com/reebalazs/buildout.javascript.yeoman/master/yeoman.cfg
+    versions.cfg
+    http://dist.plone.org/release/4.2.5/versions.cfg
+
 extensions = mr.developer
 auto-checkout = *
 
-parts =  
+parts +=  
     instance
     zopepy
     i18ndude
     zopeskel
     test
     codeintel
+    bower_modules
 
-extends =
-    versions.cfg
-    http://dist.plone.org/release/4.2.5/versions.cfg
-    
+
 # Add additional egg download sources here. dist.plone.org contains archives
 # of Plone packages.
 find-links =
-    http://dist.plone.org:5021/release/4.2.5/
+    http://dist.plone.org/release/4.2.5/
     http://dist.plone.org/thirdparty
-
-extensions = 
-    mr.developer
 
 
 # Reference any folders where you have Python egg source code under development here 
@@ -39,7 +40,7 @@ extensions =
 [instance]
 recipe = plone.recipe.zope2instance
 user = admin:admin
-http-address = 8780
+http-address = 8686
 debug-mode = off
 verbose-security = on
 blob-storage = var/blobstorage
@@ -89,3 +90,10 @@ eggs = ${instance:eggs}
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
+
+
+# You can specify your own additional Node scripts.
+# Make sure to add dependencies to package.json as well.
+#[buster_script]
+#<= node_script
+#script_name = buster
