--- a/buildout.cfg
+++ b/buildout.cfg
@@ -34,7 +34,9 @@ find-links =
 # e.g.: develop = src/my.package
 # If you are using the mr.developer extension and have the source code in a 
 # repository mr.developer will handle this automatically for you
-#develop =
+develop =
+    src/firebaseplonedemo
+
 
 # Create bin/instance command to manage Zope start up and shutdown
 [instance]
@@ -48,11 +50,14 @@ blob-storage = var/blobstorage
 eggs =
     Plone
     PIL
+    firebaseplonedemo
 
 # Some pre-Plone 3.3 packages may need you to register the package name here in 
 # order their configure.zcml to be run (http://plone.org/products/plone/roadmap/247)
 # - this is never required for packages in the Products namespace (Products.*)
-#zcml =
+zcml =
+    firebaseplonedemo
+
 
 # zopepy commands allows you to execute Python scripts using a PYTHONPATH 
 # including all the configured eggs
