--- a/buildout.cfg
+++ b/buildout.cfg
@@ -95,6 +95,8 @@ eggs = ${instance:eggs}
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
+# need github version from firebase-token-generator, as the release is broken with
+firebase_token_generator = git https://github.com/firebase/firebase-token-generator-python.git
 
 
 # You can specify your own additional Node scripts.
