--- a/buildout.cfg
+++ b/buildout.cfg
@@ -49,14 +49,14 @@ blob-storage = var/blobstorage
 eggs =
     Plone
     PIL
-    firebaseplonedemo
+    firebaseploneportlets
     Products.PloneHotfix20130618
 
 # Some pre-Plone 3.3 packages may need you to register the package name here in 
 # order their configure.zcml to be run (http://plone.org/products/plone/roadmap/247)
 # - this is never required for packages in the Products namespace (Products.*)
 zcml =
-    firebaseplonedemo
+    firebaseploneportlets
 
 
 # zopepy commands allows you to execute Python scripts using a PYTHONPATH 
